@@ -2,8 +2,10 @@ package com.online.unishop.core.user.service;
 
 import com.online.unishop.core.role.dto.RoleDto;
 import com.online.unishop.core.role.model.RoleModel;
+import com.online.unishop.core.role.model.RoleModelRepository;
 import com.online.unishop.core.user.model.UsersModel;
 import com.online.unishop.core.user.dto.UsersDto;
+import com.online.unishop.core.user.model.UsersModelRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -14,7 +16,8 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class UsersServiceImplements implements UsersService{
 
-    private final com.online.unishop.core.user.model.UsersModelRepository usersModelRepository;
+    private final UsersModelRepository usersModelRepository;
+    private final RoleModelRepository roleModelRepository;
 
     /*Без Lombok @RequiredArgsConstructor это выглядело бы так:
     public UsersServiceImplements(com.online.unishop.core.model.UsersModelRepository usersModelRepository) {
@@ -22,7 +25,16 @@ public class UsersServiceImplements implements UsersService{
     }*/
 
     @Override
-    public void addNewUser(String login, String password, String fullName, String birthDate, String phoneNumber, String profileAvatar, RoleDto roleDto) {
+    public void addNewUser(
+            String login,
+            String password,
+            String fullName,
+            String birthDate,
+            String phoneNumber,
+            String profileAvatar
+           )
+    {
+
         usersModelRepository.save(
                 new UsersModel(
                         null,
@@ -32,7 +44,7 @@ public class UsersServiceImplements implements UsersService{
                         birthDate,
                         phoneNumber,
                         profileAvatar,
-                        new RoleModel()
+                        null
                 )
         );
     }
@@ -43,7 +55,7 @@ public class UsersServiceImplements implements UsersService{
                 .findAll()
                 .stream()
                 .map(UsersModel::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -62,21 +74,24 @@ public class UsersServiceImplements implements UsersService{
     }
 
     @Override
-    public void updateUser(Long id, String login, String password, String fullName, String birthDate, String phoneNumber, String profileAvatar, RoleDto roleDto) {
-        UsersModel userModel = usersModelRepository
+    public void updateUser(Long id, String login, String password, String fullName, String birthDate, String phoneNumber, String profileAvatar, String roleName) {
+        UsersModel updatedUserModel = usersModelRepository
                 .findById(id)
                 .orElseThrow();
+        RoleModel updatedRoleModel = roleModelRepository
+                .findByName(roleName);
 
-        userModel.setLogin(login);
-        userModel.setPassword(password);
-        userModel.setFullName(fullName);
-        userModel.setBirthDate(birthDate);
-        userModel.setPhoneNumber(phoneNumber);
-        userModel.setProfileAvatar(profileAvatar);
-        userModel.setRoleModel(new RoleModel());
+        updatedUserModel.setLogin(login);
+        updatedUserModel.setPassword(password);
+        updatedUserModel.setFullName(fullName);
+        updatedUserModel.setBirthDate(birthDate);
+        updatedUserModel.setPhoneNumber(phoneNumber);
+        updatedUserModel.setProfileAvatar(profileAvatar);
+        updatedUserModel.setRoleModel(updatedRoleModel);
 
         usersModelRepository
-                .save(userModel);
+                .save(
+                        updatedUserModel);
 
     }
 
